# sigv4

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: error.rs  main.rs
tests/data/: file.json
