[package]
name = "sigv4"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "aws sigv4 cli"

[[bin]]
name = "sigv4"
path = "src/main.rs"

[dependencies]
env_logger = "0.7"
futures = "0.1"
rusoto_core = "0.41"
smallvec = "0.6"
structopt = "0.3"
