[package]
name = "sigv4"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "aws sigv4 cli"

[[bin]]
name = "sigv4"
path = "src/main.rs"

[dependencies]
http = "0.1"
colored = "1.8"
colored_json = "2.0"
env_logger = "0.7"
futures = "0.1"
rusoto_core = { version = "0.41",  default_features = false, features=["rustls"] }
smallvec = "0.6"
structopt = "0.3"
url = "2.1"

[dev-dependencies]
pretty_assertions = "0.6"