[package]
name = "sigv4-cli"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[[bin]]
name = "sigv4"
path = "src/main.rs"

[dependencies]
rusoto_core = { git = "https://github.com/softprops/rusoto" }
futures = "0.1"
structopt = "0.2"
#sigv4 = { version = "0.1.0", path = "../lib" }
